# EmployeeManagementSystem

./: CMakeLists.txt  LICENSE  README.md
header/: Boss.h  Employee.h  EmployeeManager.h  Manager.h  Staff.h
src/: Boss.cpp  EMS.cpp  EmployeeManager.cpp  Manager.cpp  Staff.cpp
test/: Test.cpp
